# bedrock-appsync-streaming

./: .editorconfig  .gitignore  README.md  bedrock-streaming.code-workspace
bedrock-appsync-api/: .editorconfig  .gitignore  schema.graphql
bedrock-appsync-api/resolvers/: mutation-sendMessage-resolver.js  query-getLlmResponse-resolver.js  subscription-onSendMessage-resolver.js
bedrock-appsync-ds-lambda/: .editorconfig  .pylintrc  build.sh  pyproject.toml
bedrock-appsync-ds-lambda/src/: history.py  lambda_function.py
bedrock-appsync-ds-lambda/src/api/: appsync.py
bedrock-appsync-ds-lambda/src/common/: lambda_helper.py  logging_helper.py  session_helper.py  sns_helper.py
bedrock-orchestrator-lambda/: .editorconfig  .gitignore  pyproject.toml
bedrock-orchestrator-lambda/src/: history.py  lambda_function.py
bedrock-orchestrator-lambda/src/api/: appsync.py  mutations.py
bedrock-orchestrator-lambda/src/sns/: sns_helper.py
bedrock-orchestrator-lambda/src/translations/: common.py
chat-bot-ui/: .babelrc  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  webpack.config.js
chat-bot-ui/src/: config.js  demo.html  index.html  index.jsx
chat-bot-ui/src/components/: App.css  App.jsx  Message.css  Message.jsx  UserInput.css  UserInput.jsx
chat-bot-ui/src/contexts/: AppContext.jsx
chat-bot-ui/src/graphql/: queries.js  subscriptions.js
chat-bot-ui/src/reducers/: actions.js  apiReducer.js  messagesReducer.js  rootReducer.js  sessionReducer.js
chat-bot-ui/src/style/: demo-resets.css  resets.css
chat-bot-ui/src/translations/: common.js
chat-bot-ui/src/utils/: chatUtils.js  graphqlUtils.js  restApiUtils.js  timeUtils.js  websocketUtils.js
deployment/: appsync-api-rag.tf  main.tf  sample.tfvars
deployment/module/: README.md
docs/: BedrockStreaming.xml  architecture - part1.puml  architecture - part2.puml  sequence_diagram.puml
scripts/: setup_workspace.sh
(+15 files in other folders)
